--- a/.gitconfig
+++ b/.gitconfig
@@ -202,6 +202,10 @@
 
   program = gpg2
 
+[status]
+
+  submoduleSummary = true
+
 [user]
 
   name = Your Name
@@ -221,3 +225,4 @@
 [gitreview]
 
   username = gerritusername
+
