--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,3 @@
-[init]
-  templatedir = ~/.git_templates
-
 [alias]
 
   # View abbreviated SHA, description, and history graph of the latest 20 commits
@@ -79,6 +76,12 @@
     fi \
   }; f"
 
+  pr = "!f() { git fetch -fu ${2:-upstream} refs/pull/$1/head:pr/$1 && git checkout pr/$1; }; f"
+
+  pr-clean = "!git checkout master ; \
+    git for-each-ref refs/heads/pr/* --format="%(refname)" | while read ref ; \
+    do branch=${ref#refs/heads/} ; git branch -D $branch ; done"
+
 [apply]
 
   # Detect whitespace errors when applying a patch
@@ -87,7 +90,7 @@
 [core]
 
   # Use custom `.gitignore` and `.gitattributes`
-  excludesfile = ~/.gitignore
+	excludesfile = ~/.gitignore_global
   attributesfile = ~/.gitattributes
 
   # Treat spaces before tabs and all kinds of trailing whitespace as an error
@@ -105,6 +108,7 @@
 
   # Vim is the way to go :)
   editor = /usr/bin/vim
+
 
 [color]
 
@@ -225,4 +229,13 @@
 [gitreview]
 
   username = gerritusername
+
+[http]
+
+  followRedirects = 1
+
+[credential]
+
+  helper = cache
+
 
